ECP-465: integ tests for inlined stuff now passing.
Reworks to use ModuleAbstract, gets rid of the proxy IncodeXxx modules that we used to have